force-app/main/default/objects/Account_Sales_Area__c/Account_Sales_Area__c.object-meta.xml
<CustomObject>
    <description>Stores the ERP (SAP) system specific information such as Sales Organization, Distribution Channel, Division and Company Code for the related account. Contains inco terms, pricegroup, pricelist type and terms of payment assigned to the given account</description>
    <label>Account Sales Area</label>
    <nameField>
        <displayFormat>AS-{00000000}</displayFormat>
        <label>Account Sales Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Sales Area</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>