force-app/main/default/objects/Account_Sales_Area__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Lookup to Account.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Sales Area</relationshipLabel>
    <relationshipName>Account_Sales_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>