force-app/main/default/objects/Account_Sales_Area__c/fields/Channel_Partner_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_License_Expiration_Date__c</fullName>
    <description>Field to store Channel Partner License Expiration Date.</description>
    <label>Channel Partner License Expiration Date</label>
    <type>Date</type>
</CustomField>