force-app/main/default/objects/Account_Sales_Area__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>Field to store Company Code.</description>
    <label>Company Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>