force-app/main/default/objects/Account_Sales_Area__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>Field to store Contract Number.</description>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>