force-app/main/default/objects/Account_Sales_Area__c/fields/Customer_Master_Data__c.field-meta.xml
<CustomField>
    <fullName>Customer_Master_Data__c</fullName>
    <description>Lookup to Customer Master Data.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Master Data</label>
    <referenceTo>Customer_Master_Data__c</referenceTo>
    <relationshipLabel>Account Sales Area</relationshipLabel>
    <relationshipName>Account_Sales_Area</relationshipName>
    <type>Lookup</type>
</CustomField>