force-app/main/default/objects/Account_Sales_Area__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Field to store Division.</description>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>