force-app/main/default/objects/Account_Sales_Area__c/fields/ERP_Account_Sales_Area_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Account_Sales_Area_Id__c</fullName>
    <description>Unique External Field to store ERP Account Sales Area Id.</description>
    <externalId>true</externalId>
    <label>ERP Account Sales Area Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>