force-app/main/default/objects/Account_Sales_Area__c/fields/Inco_Term_1__c.field-meta.xml
<CustomField>
    <fullName>Inco_Term_1__c</fullName>
    <description>Incoterm 1 for standard shipments.</description>
    <label>Inco Term 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inco_Term_1</valueSetName>
    </valueSet>
</CustomField>