force-app/main/default/objects/Account_Sales_Area__c/fields/IsInactive__c.field-meta.xml
<CustomField>
    <fullName>IsInactive__c</fullName>
    <description>Field to check if record Is Inactive or not.</description>
    <defaultValue>false</defaultValue>
    <label>IsInactive</label>
    <type>Checkbox</type>
</CustomField>