force-app/main/default/objects/Account_Sales_Area__c/fields/National_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Group_Number__c</fullName>
    <description>Field to store National Group Number.</description>
    <label>National Group Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>