force-app/main/default/objects/Account_Sales_Area__c/fields/Price_Group__c.field-meta.xml
<CustomField>
    <fullName>Price_Group__c</fullName>
    <description>Field to store Price Group.</description>
    <label>Price Group</label>
    <length>4</length>
    <type>Text</type>
</CustomField>