force-app/main/default/objects/Account_Sales_Area__c/fields/Price_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Price_Group_Description__c</fullName>
    <description>Field to store the Price Group Description.</description>
    <label>Price Group Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>