force-app/main/default/objects/Account_Sales_Area__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <description>As part of DCP 10312 to store the price list.</description>
    <label>Price List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>