force-app/main/default/objects/Account_Sales_Area__c/fields/Price_List_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Type__c</fullName>
    <description>Field to store Price List Type.</description>
    <label>Price List Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>