force-app/main/default/objects/Account_Sales_Area__c/fields/Sales_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group_Number__c</fullName>
    <description>Field to store Sales_Group_Number.</description>
    <label>Sales_Group_Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>