force-app/main/default/objects/Account_Sales_Area__c/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <description>Field to store Sales Organization.</description>
    <label>Sales Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>