force-app/main/default/objects/Account_Sales_Area__c/fields/Term_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Term_Of_Payment__c</fullName>
    <description>Field to store Term Of Payment.</description>
    <label>Term Of Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>